Revision history for Catalyst-View-ByCode

0.14    2010-12-09
        * fixed a false escaping of render()'ed content from eg. FormFu
        * removed some typos
        * added more tests
        
0.13    2010-12-09
        * increased version number due to a CPAN upload problem
        
0.12    2010-12-08
        * complete rewrite of the whole rendering code
          using simple structures instead of Moose for performance
          changed speed for readability

        2010-06-30
        * changed some parts of markup generation to inline code for speedup

0.11    2010-04-06
        * changed parameters transfered from process() to render() as
          actions with :Args() fail otherwise
        * added a test for this.
         
        2010-04-08
        * added documentation

        2010-04-15
        * $VERSION is now generated from Dist::Zilla 
        
        2010-05-27
        * added a rudimentary html5 doctype

0.10    2010-04-01
        * bumped MooseX::AttributeHelpers to Version 0.23, as 0.22 fails
          Thanks, CPAN Testers!
        * tried Dist::Zilla as a packaging system -- looks much easier to use.
        * split up the process() method into render() and delivery to allow
          my $html = $c->forward('View::ByCode', render => [qw(list of files)]);
          without pollution of stash.
        
        2010-03-31
        * added a handy shortcut for checked, disabled, multiple, readonly
          and selected attributes rendering a true value to the 
          attribute's name
          eg: disabled => 1 will become disabled="disabled" in HTML
        * added a params() sub that allows to specify a series of
          param tags with one call.
        
        2010-03-29
        * fixed a bug that made block-definitions defined in 'old-scholl'
          fashion unable to read attr()-values. Only declare-defined
          blocks could read attr()-values.
          Added a test to verify the improvement.