@@ -5,6 +5,9 @@ Revision history for Catalyst-View-ByCode
         * removed some typos
         * added more tests
         
+        2011-01-20
+        * allowed block_content() to forward arguments into the code-block called.
+        
 0.13    2010-12-09
         * increased version number due to a CPAN upload problem
         
